# Protein-ligand_interactions_research

./: .gitignore  CMakeLists.txt  README.md  doxygen.txt  interactions.csv
doc/: cmake_101.md  intermolecular_interactions.md  rdkit_101.md
src/: MainPage.md  helpers.cuh  interactions.csv  kernel.cu  main.cpp  main.hpp  nvtx_tags.hpp
support/: deleteCSV.sh  diff.sh  testing.sh  testing_profile_CPU.sh  testing_profile_GPU.sh
support/testing_samples/: interactions.csv
support/testing_samples/0monsterCase/: 0monsterCase_ligand.mol2
support/testing_samples/1ba8/: 1ba8_ligand.sdf
support/testing_samples/1bap/: 1bap_ligand.sdf
support/testing_samples/1bb0/: 1bb0_ligand.sdf
support/testing_samples/1bbz/: 1bbz_ligand.sdf
support/testing_samples/1bcj/: 1bcj_ligand.sdf
support/testing_samples/1bdl/: 1bdl_ligand.sdf
support/testing_samples/1bdr/: 1bdr_ligand.sdf
support/testing_samples/1bgo/: 1bgo_ligand.sdf
support/testing_samples/1bil/: 1bil_ligand.sdf
support/testing_samples/1bim/: 1bim_ligand.sdf
support/testing_samples/1bio/: 1bio_ligand.sdf
support/testing_samples/1biw/: 1biw_ligand.sdf
support/testing_samples/1bji/: 1bji_ligand.sdf
support/testing_samples/1bjr/: 1bjr_ligand.sdf
support/testing_samples/1bkj/: 1bkj_ligand.sdf
support/testing_samples/1bkm/: 1bkm_ligand.sdf
support/testing_samples/1bky/: 1bky_ligand.sdf
support/testing_samples/1bl4/: 1bl4_ligand.sdf
support/testing_samples/1bl6/: 1bl6_ligand.sdf
support/testing_samples/1bl7/: 1bl7_ligand.sdf
support/testing_samples/1bm2/: 1bm2_ligand.sdf
support/testing_samples/1bm6/: 1bm6_ligand.sdf
support/testing_samples/1bmb/: 1bmb_ligand.sdf
support/testing_samples/1bmk/: 1bmk_ligand.sdf
support/testing_samples/1bmm/: 1bmm_ligand.sdf
support/testing_samples/1bmn/: 1bmn_ligand.sdf
support/testing_samples/1bmq/: 1bmq_ligand.sdf
support/testing_samples/1bnm/: 1bnm_ligand.sdf
support/testing_samples/1bo5/: 1bo5_ligand.sdf
support/testing_samples/1bq3/: 1bq3_ligand.sdf
support/testing_samples/1bqm/: 1bqm_ligand.sdf
support/testing_samples/1bqn/: 1bqn_ligand.sdf
support/testing_samples/1bqo/: 1bqo_ligand.sdf
support/testing_samples/1br5/: 1br5_ligand.sdf
support/testing_samples/1br8/: 1br8_ligand.sdf
support/testing_samples/1bra/: 1bra_ligand.sdf
support/testing_samples/1bsk/: 1bsk_ligand.sdf
support/testing_samples/1bt6/: 1bt6_ligand.sdf
support/testing_samples/1btn/: 1btn_ligand.sdf
support/testing_samples/1bug/: 1bug_ligand.sdf
support/testing_samples/1bux/: 1bux_ligand.sdf
support/testing_samples/1bwn/: 1bwn_ligand.sdf
support/testing_samples/1bxl/: 1bxl_ligand.sdf
support/testing_samples/1bzf/: 1bzf_ligand.sdf
support/testing_samples/1bzh/: 1bzh_ligand.sdf
support/testing_samples/1bzs/: 1bzs_ligand.sdf
support/testing_samples/1c12/: 1c12_ligand.sdf
support/testing_samples/1c29/: 1c29_ligand.sdf
support/testing_samples/1c2t/: 1c2t_ligand.sdf
support/testing_samples/1c3b/: 1c3b_ligand.sdf
(+1973 files in other folders)
